🎨 Se mueve averageCaseTime a StatsController y se actualiza documentación de OpenAPI
